CASSANDRA-19528: Use a classloader to isolate in-jvm dtest classes in… (#50)
Patch by Francisco Guerrero; Reviewed by Yifan Cai for CASSANDRA-19528